# JetArm-Dummy

./: .gitignore  align_leader_arm.py  arm_log.csv  cleanup_serial_port.sh  compliant_trajectory.csv  dummy_robot_simulator.py  final_trajectory.csv  follower_arm_config.py  goto_predefined_pose.py  leader_arm_mode.py  leader_arm_teach_angles.py  leader_log.csv  my_trajectory.csv  pose_test_sequence.py  show_leader_angles.py  teleop_bridge.py  teleop_bridge_sim.py  teleop_debug_node.py  teleop_debug_real.py  teleop_debug_sim.py  teleop_mapping.py  test.py  trajectory.csv  tune_compliance.py  功能总结.md  控制脚本.py  运行脚本.md
JetArmF4_Firmware/: .mxproject  CMakeLists.txt  JetArmController_v1.0.pkg  JetArmF4_Firmware.ioc  Makefile  armclang.bat  armclang.cmake  clean_keil.bat  startup_stm32f407xx.s
JetArmF4_Firmware/.cache/clangd/index/: adc.h.8D3EE5ED30537313.idx  button.h.AB36656F65C3ECD5.idx  buzzer.h.025C371BDC52653A.idx  checksum.h.0E497DE2BF51F42C.idx  dma.h.F254BEFE9EF677D4.idx  global_conf.h.803C6299AE9912D7.idx  global_include.h.2D0C6E61E197428B.idx  gpio.h.A343D152D08EC242.idx  led.h.549336FEF74E529D.idx  lwmem.h.10D23F0B5F1115A1.idx  lwmem_opt.h.05487EB09A48C762.idx  lwmem_opts.h.4A11F530724F8835.idx  lwmem_porting.h.EECDE908EC1AA1B2.idx  lwrb.h.D19855FE8C2A140B.idx  main.c.6B06B0B7108522D3.idx  main.h.5370E1157552B25E.idx  packet.h.DF688D49833CB64F.idx  packet_reports.h.2F2A17163F38B1B3.idx  pwm_servo.h.25E6977BAE5B5569.idx  serial_servo.h.4C5B6DEAACCCCEF4.idx  stm32_hal_legacy.h.91A58AB88B0A0C3F.idx  stm32f4xx_hal.h.2CC25718403B04CC.idx  stm32f4xx_hal_adc.h.966D004AFEEE33AB.idx  stm32f4xx_hal_adc_ex.h.656AC288B9F4142B.idx  stm32f4xx_hal_conf.h.AF467EC7AB45A458.idx  stm32f4xx_hal_cortex.h.A136537ED3EE8362.idx  stm32f4xx_hal_def.h.165FB70AD5958CCA.idx  stm32f4xx_hal_dma.h.163C3C034D040A18.idx  stm32f4xx_hal_dma_ex.h.E1CC4F8820BA4D96.idx  stm32f4xx_hal_exti.h.4871228F24D00F27.idx  stm32f4xx_hal_flash.h.9597DBC3C0776B44.idx  stm32f4xx_hal_flash_ex.h.F5E50B80DE62AEB0.idx  stm32f4xx_hal_flash_ramfunc.h.F51D42E6F27F3583.idx  stm32f4xx_hal_gpio.h.A7FCBB6DE30DD187.idx  stm32f4xx_hal_gpio_ex.h.B51646C227C4A831.idx  stm32f4xx_hal_pwr.h.A9E729FDF4E20BCE.idx  stm32f4xx_hal_pwr_ex.h.09117AF0E195D313.idx  stm32f4xx_hal_rcc.h.574ABE61F886AF76.idx  stm32f4xx_hal_rcc_ex.h.5D158DA882905B01.idx  stm32f4xx_hal_tim.h.D7960EC6D5B99806.idx  (+5 more)
JetArmF4_Firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
JetArmF4_Firmware/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
JetArmF4_Firmware/Hiwonder/: global_conf.h  global_include.h
JetArmF4_Firmware/Hiwonder/Misc/: log.c  log.h  object.h  packet.c  packet.h  syscall.c
JetArmF4_Firmware/Hiwonder/Peripherals/: button.c  dc_motor.c  dc_motor.h  encoder_motor.c  imu_mpu6050.c  pwm_servo.c  pwm_servo.h  serial_servo.c  serial_servo.h
JetArmF4_Firmware/Hiwonder/Portings/: button_porting.c  buzzer_porting.c  chassis_porting.c  imu_porting.c  led_porting.c  lwmem_porting.c  motor_porting.c  packet_porting.c  packet_reports.h  pwm_servo_porting.c  serial_servo_porting.c
JetArmF4_Firmware/Hiwonder/System/: app.c  packet_handle.c  packet_handle.h
JetArmF4_Firmware/MDK-ARM/: JLinkLog.txt  JetArmF4_Firmware.uvguix.lucas  JetArmF4_Firmware.uvoptx  JetArmF4_Firmware.uvprojx
JetArmF4_Firmware/MDK-ARM/.eide/: eide.json  jetarmf4_firmware.arm.options.v6.json
JetArmF4_Firmware/MDK-ARM/JetArmF4_Firmware/: JetArmF4_Firmware.axf  JetArmF4_Firmware.build_log.htm  JetArmF4_Firmware.hex  JetArmF4_Firmware.htm  JetArmF4_Firmware.lnp  JetArmF4_Firmware.map  JetArmF4_Firmware.sct  JetArmF4_Firmware_JetArmF4_Firmware.dep  JetArmF4_Firmware_sct.Bak  adc.d  app.d  button.d  button_porting.d  buzzer.d  buzzer_porting.d  checksum.d  cmsis_os2.d  croutine.d  dma.d  encoder_motor.d  event_groups.d  eventrecorder.d  freertos.d  gpio.d  heap_4.d  imu.d  led.d  led_porting.d  list.d  log.d  lwmem.d  lwmem_porting.d  lwmem_sys_cmsis_os.d  lwpkt.d  lwrb.d  lwshell.d  main.d  motor_porting.d  packet.d  packet_handle.d  (+41 more)
JetArmF4_Firmware/MDK-ARM/RTE/_JetArmF4_Firmware/: RTE_Components.h
ROS2/: standalone_arm_reader.py
ROS2/src/Log/: OrbbecSDK.log.txt
ROS2/src/app/: setup.py
ROS2/src/chassis/: setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
(+748 files in other folders)
